dovecot/dovecot-pigeonhole/tests/extensions/include/errors/depth-limit.sieve
require "include";

include :personal "depth-limit-1";
